# ventas360-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: arquitectura-api.mdc
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  dependencias.py  eventos.py  excepciones.py  paginacion.py  seguridad.py
app/modulos/: __init__.py
app/modulos/auth/: __init__.py  bo.py  contrato.py  dao.py  models.py  router.py  schemas.py  service.py
app/modulos/bancos/: __init__.py  bo.py  contrato.py  dao.py  models.py  router.py  schemas.py  service.py
app/modulos/caja/: __init__.py  bo.py  contrato.py  dao.py  models.py  router.py  schemas.py  service.py
app/modulos/clientes/: __init__.py  bo.py  contrato.py  dao.py  models.py  router.py  schemas.py  service.py
app/modulos/cobranzas/: __init__.py  bo.py  dao.py  models.py  router.py  schemas.py  service.py
app/modulos/compras/: __init__.py  bo.py  dao.py  models.py  router.py  schemas.py  service.py
app/modulos/cxc/: __init__.py  bo.py  contrato.py  dao.py  models.py  router.py  schemas.py  service.py
app/modulos/cxp/: __init__.py  bo.py  contrato.py  dao.py  models.py  router.py  schemas.py  service.py
app/modulos/parametros/: __init__.py  bo.py  contrato.py  dao.py  models.py  router.py  schemas.py  (+1 more)
docs/: winsales-fase-a-ventas360.md  winsales-fase-b-ventas360.md  winsales-validacion-modulos.md
scripts/: __init__.py  seed.py  seed_casuistica.py
tests/: conftest.py  test_api_catalogos_fase_a.py  test_api_cxc_cobranzas.py  test_api_importacion_lista.py  test_api_login.py  test_api_remitos_fase_a.py  test_api_reporteria_fase_a.py  test_bo_auth.py  test_bo_bancos.py  test_bo_caja.py  test_bo_clientes.py  test_bo_compras.py  test_bo_cxc.py  test_bo_importacion_lista.py  test_bo_parametros.py  test_bo_proveedores.py  test_bo_stock.py  test_bo_ventas.py  test_bo_zonas.py
(+55 files in other folders)
